tests/langs/snapshots/r#mod__langs__base.py_try.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 114
  l: "    try:\n"
  m: "    ^^^^^^"
- n: 115
  l: "        if x < 0:\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 116
  l: "            raise ValueError(\"Negative value\")\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 117
  l: "        elif x == 0:\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 118
  l: "            raise ZeroDivisionError(\"Division by zero\")\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 119
  l: "        result = 10 / x\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 120
  l: "    except ZeroDivisionError as e:\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 121
  l: "        print(f\"Caught an exception: {e}\")\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 122
  l: "    except ValueError as e:\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 123
  l: "        print(f\"Caught an exception: {e}\")\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 124
  l: "    else:\n"
  m: ^^^^^^^^^^^
- n: 125
  l: "        print(\"No exceptions caught\")\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 126
  l: "    finally:\n"
  m: ^^^^^^^^^^^^^^
- n: 127
  l: "        print(\"This will always be printed\")\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
