tests/langs/snapshots/r#mod__langs__base.rs_comments.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 1
  l: "//! Module for testing various Rust grammar elements.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 29
  l: "// Global variable\n"
  m: "^^^^^^^^^^^^^^^^^^  "
- n: 36
  l: "    // A free function for testing.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 43
  l: "// Decorator for functions\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 48
  l: "    // Decorator for free function.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 61
  l: "    // Function with a decorator.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 83
  l: "    /*\n"
  m: "    ^^^^"
- n: 84
  l: "        More comment types\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 85
  l: "    */\n"
  m: "^^^^^^  "
- n: 87
  l: "    // Static decorator for methods\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 92
  l: "        // Decorator for static methods.\n"
  m: "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 99
  l: "    // Method\n"
  m: "    ^^^^^^^^^  "
- n: 101
  l: "        // Instance method.\n"
  m: "        ^^^^^^^^^^^^^^^^^^^  "
- n: 107
  l: "        // Static method.\n"
  m: "        ^^^^^^^^^^^^^^^^^  "
- n: 112
  l: "// Enum definition\n"
  m: "^^^^^^^^^^^^^^^^^^  "
- n: 121
  l: "        // Function demonstrating match statement.\n"
  m: "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 130
  l: "// Statements\n"
  m: "^^^^^^^^^^^^^  "
- n: 144
  l: "    // Function demonstrating inplace operators.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 153
  l: "// Control flow\n"
  m: "^^^^^^^^^^^^^^^  "
- n: 155
  l: "    // Function demonstrating various control flow statements.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 156
  l: "    // if statement\n"
  m: "    ^^^^^^^^^^^^^^^  "
- n: 163
  l: "    // while statement\n"
  m: "    ^^^^^^^^^^^^^^^^^^  "
- n: 170
  l: "    // for statement\n"
  m: "    ^^^^^^^^^^^^^^^^  "
- n: 175
  l: "    // with statement\n"
  m: "    ^^^^^^^^^^^^^^^^^  "
- n: 185
  l: "    // Open a connection to the mini-redis address.\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 188
  l: "    // Set the key \"hello\" with value \"world\"\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 191
  l: "    // Get key \"hello\"\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^  "
- n: 203
  l: "// Main execution\n"
  m: "^^^^^^^^^^^^^^^^^  "
- n: 207
  l: "    // Lambda expression\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^  "
- n: 210
  l: "    // Multiline string\n"
  m: "    ^^^^^^^^^^^^^^^^^^^  "
